CAMEL-20789: Download binary content of Secret or Config Map in property resolver