@@ -245,7 +245,11 @@ abstract class BasePropertiesFunction extends ServiceSupport implements Properti
             Path file = root.resolve(name.toLowerCase(Locale.US)).resolve(key);
             if (Files.exists(file) && !Files.isDirectory(file)) {
                 try {
-                    answer = Files.readString(file, StandardCharsets.UTF_8);
+                    if (isBinaryProperty()) {
+                        answer = writeDataToTempFile(file.getFileName().toString(), Files.readAllBytes(file));
+                    } else {
+                        answer = Files.readString(file, StandardCharsets.UTF_8);
+                    }
                 } catch (IOException e) {
                     // ignore
                 }
@@ -265,4 +269,22 @@ abstract class BasePropertiesFunction extends ServiceSupport implements Properti
     abstract Path getMountPath();
 
     abstract String lookup(String name, String key, String defaultValue);
+
+    protected String handleData(String key, byte[] raw) {
+        return isBinaryProperty() ? writeDataToTempFile(key, raw) : new String(raw);
+    }
+
+    private boolean isBinaryProperty() {
+        return getName().endsWith("-binary");
+    }
+
+    protected String writeDataToTempFile(String fileName, byte[] data) {
+        try {
+            final Path filePath = Files.createTempDirectory("camel").resolve(fileName);
+            Files.write(filePath, data);
+            return filePath.toAbsolutePath().toString();
+        } catch (IOException e) {
+            throw new RuntimeException(e.getMessage(), e);
+        }
+    }
 }
